<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/Pre_Load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/bg_10_secondary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="10dp"
                android:paddingEnd="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center|left"
                        android:text="@string/item_bar_basic"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/color_white"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center|right"
                        android:src="@drawable/item_unpressed" />
                </LinearLayout>

                <View
                    style="@style/divider_color"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="@dimen/dp_10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="10dp"
                android:paddingEnd="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center|left"
                        android:text="@string/item_bar_height"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/color_white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center|right"
                        android:src="@drawable/item_unpressed" />
                </LinearLayout>

                <View
                    style="@style/divider_color"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="@dimen/dp_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="10dp"
                android:paddingEnd="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center|left"
                        android:text="@string/item_bar_branch"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/color_white"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center|right"
                        android:src="@drawable/item_unpressed" />
                </LinearLayout>

                <View
                    style="@style/divider_color"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="@dimen/dp_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="10dp"
                android:paddingEnd="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center|left"
                        android:text="@string/item_bar_big"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/color_white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center|right"
                        android:src="@drawable/item_unpressed" />
                </LinearLayout>

                <View
                    style="@style/divider_color"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="@dimen/dp_10" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="10dp"
                android:paddingEnd="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center|left"
                        android:text="@string/item_bar_small"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/color_white"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center|right"
                        android:src="@drawable/item_unpressed" />
                </LinearLayout>

                <View
                    style="@style/divider_color"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="@dimen/dp_10" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/mianliner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/item_bar_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:background="@drawable/bg_item_bar_bottom"
                android:orientation="vertical"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
